# django-template

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/accounts/: forms.py  views.py
{{cookiecutter.project_name}}/accounts/migrations/: 0001_initial.py  0002_dev_superuser.py
{{cookiecutter.project_name}}/accounts/templates/accounts/: user_settings.html
{{cookiecutter.project_name}}/accounts/templates/registration/: user_registration.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  settings.py  urls.py  wsgi.py
